# ProjectTheProject

./: CMakeLists.txt  Dependencies.txt  Notes.txt  README.md
GameTheGame/: CMakeLists.txt
GameTheGame/source/: main.c  metadata.c  metadata.h
GameTheGame/source/GTG/: metadata.c  metadata.h
PepeThePepe/: CMakeLists.txt
PepeThePepe/include/PTP/: init.h
PepeThePepe/private/PTP/: state.h
PepeThePepe/source/PTP/: init.c  state.c
scripts/: build  commit  configure  format  format-all  init  run
sh/: configure  format  init  run
